force-app/main/default/objects/Custom_Test_Object__c/Custom_Test_Object__c.object-meta.xml
<CustomObject>
    <label>Custom Test Object</label>
    <nameField>
        <label>Custom Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>