force-app/main/default/objects/Custom_Test_Object__c/fields/Field_Not_Visible_2__c.field-meta.xml
<CustomField>
    <fullName>Field_Not_Visible_2__c</fullName>
    <description>Another field not visible in the layout</description>
    <label>Field Not Visible 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>