force-app/main/default/objects/Custom_Test_Object__c/fields/Field_Not_Visible__c.field-meta.xml
<CustomField>
    <fullName>Field_Not_Visible__c</fullName>
    <description>Field not visible on the layout</description>
    <label>Field Not Visible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>