force-app/main/default/objects/Custom_Test_Object__c/fields/Required_Field__c.field-meta.xml
<CustomField>
    <fullName>Required_Field__c</fullName>
    <defaultValue>&quot;default value&quot;</defaultValue>
    <label>Required Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>